fine esercizio + bonus

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <h1>Voglio fare un gioco con te</h1>
+
+    <div class="box">
+        <div id="player"></div>
+        <button id="btn"></button>
+        <div id="computer"></div>
+    </div>
+
+    <div id="esito"></div>
     
     <script src="js/script.js"></script>
 </body>
