--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="box">
         <div id="player"></div>
-        <button id="btn"></button>
+        <button id="btn">Vivere o Morire</button>
         <div id="computer"></div>
     </div>
 
