--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     <h1>Voglio fare un gioco con te</h1>
 
     <div class="box">
-        <div id="player"></div>
+        <div class="box-player">
+            <h4>Tu</h4>
+            <div id="player"></div>
+        </div>
         <button id="btn">Vivere o Morire</button>
-        <div id="computer"></div>
+        <div class="box-pc">
+            <h4>Morte</h4>
+            <div id="computer"></div>
+        </div>
     </div>
 
     <div id="esito"></div>
